# Hybrid-SIDH-SHAKE-MQTT

./: CMakeLists.txt  README.md  Readme.md
src/: alice_mqtt.c  bob_mqtt.c  masking.c  masking.h  transport.c  transport.h  transport_mqtt.c  transport_mqtt.h
